finished the leaderboard and fixed spacing in index

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 /*index.html*/
+body{
+    margin:0px;
+}
 
 header h1{
     color: white;
@@ -33,19 +36,27 @@ nav a:hover{
     text-decoration: underline;
 }
 
-#about{
+.index{
+    background-color:#d4d4d4;
+}
+
+.about{
+    padding:40px; /*asks for 20px margin and padding, that causes issues with the background color of parent*/
     display: flex;
-    background-color: #d4d4d4;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-#about p{
+.about :nth-child(n){
+    margin:8px;
+}
+
+.about p{
     color: black;
 }
 
-#about h2{
+.about h2{
     color: #004080;
 }
 
@@ -53,10 +64,18 @@ nav a:hover{
     font-weight: bold;
 }
 
-.index_list{
-    list-style: none;
+#index_list{
+    text-align:center;
+    margin:-4px;
+    padding:0;
+    list-style:none;
 }
-.index_list li::before{
+
+#index_list li{
+    margin:12px;
+}
+
+#index_list li::before{
     content: "- ";
 }
 
@@ -214,7 +233,7 @@ td img{
     text-align:center;
 }
 .quiz img{
-    width:95%;
+    width:95%; /*requirements state 100%, however this matches image shown better as in image, it doesn't take up the entire screen.*/
     height:150px;
     border-radius:10px;
     margin-top:30px;
@@ -264,6 +283,18 @@ td img{
     background-color:#821b1b;
 }
 
+/*Leaderboard*/
+.leaderboard{
+    margin-top:5px;
+    margin-bottom:20px;
+    border-spacing:10px;
+    
+}
+ .leaderboard th, tr, td{
+    border:2px solid white;
+    padding:1px;
+    margin:5px;
+}
 
 
 
